--- a/app/views/shoes/_form_partial.html.erb
+++ b/app/views/shoes/_form_partial.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
 <%= simple_form_for @shoe do |f| %>
   <%= f.input  :model %>
-  <%= f.input  :size %>
+  <%= f.input :size, :collection => [35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46] %>
   <%= f.input  :price %>
   <%= f.input  :description %>
   <%= f.input  :address %>
