booking status almost fuklly functional

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -5,3 +5,19 @@
   color: white;
   background-color: #5B00B6;
 }
+
+.bookingbtn-green {
+  width: 40%;
+  border-radius: 10px;
+  margin-top: 15px;
+  color: white;
+  background-color: #03a703;
+}
+
+.bookingbtn-red {
+  width: 40%;
+  border-radius: 10px;
+  margin-top: 15px;
+  color: white;
+  background-color: #b60600;
+}
