--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -90,7 +90,8 @@
 
 .dropdown-content {
   display: none;
-  background-color: #f1f1f1;
+  background-color: #B78EE0;
+  color: #470D69;
   min-width: 200px;
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -107,6 +108,8 @@
 
 .dropdown a:hover {
   background-color: #ffffff;
+  color: #470D69;
+  font-weight: 600;
 }
 
 .show {
