--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "components/infobox";
 @import "components/bookingcontainer";
 @import "components/bookingindex";
+@import "components/carousel";
 
 .main-content {
   padding: 20px;
