--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,100 +1,75 @@
 <%= render "pages/header_partial" %>
 <%= render "pages/navbar_partial" %>
 
-<div class="main-content">
+<div class='homepage'>
 
-    <div id="carousel-example-1z" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
-      <!--Indicators-->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="1"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-      </ol>
-      <!--/.Indicators-->
-      <!--Slides-->
-      <div class="carousel-inner" role="listbox">
-        <!--First slide-->
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="https://images.unsplash.com/photo-1520256862855-398228c41684?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80" alt="First slide">
-        </div>
-        <!--/First slide-->
-        <!--Second slide-->
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://images.unsplash.com/photo-1589187832032-3e560ed4e6b9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2501&q=80" alt="Second slide">
-        </div>
-        <!--/Second slide-->
-        <!--Third slide-->
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://images.unsplash.com/photo-1597045566677-8cf032ed6634?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2468&q=80" alt="Third slide">
-        </div>
-        <!--/Third slide-->
+  <div id="carousel-example-1z" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel" data-interval="2500">
+    <!--Indicators-->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+      <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+    </ol>
+    <!--/.Indicators-->
+    <!--Slides-->
+    <div class="carousel-inner" role="listbox">
+      <!--First slide-->
+      <div class="carousel-item active">
+        <img class="d-block w-100 carouselimg" src="https://images.unsplash.com/photo-1616070317482-ea5a9f253b64?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="First slide">
       </div>
-      <!--/.Slides-->
-      <!--Controls-->
-      <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-      <!--/.Controls-->
+      <!--/First slide-->
+      <!--Second slide-->
+      <div class="carousel-item">
+        <img class="d-block w-100 carouselimg" src="https://images.unsplash.com/photo-1613380429263-ac444f31cdc5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2200&q=80" alt="Second slide">
+      </div>
+      <!--/Second slide-->
+      <!--Third slide-->
+      <div class="carousel-item">
+        <img class="d-block w-100 carouselimg" src="https://images.unsplash.com/photo-1616070317482-ea5a9f253b64?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Third slide">
+      </div>
+      <!--/Third slide-->
     </div>
-    <!--/.Carousel Wrapper-->
-
-    <h2 class="my-5 h2">With captions</h2>
-
-    <!--Carousel Wrapper-->
-    <!--/.Carousel Wrapper-->
-
+    <!--/.Slides-->
+    <!--Controls-->
+    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+    <!--/.Controls-->
   </div>
-<%
-=begin%>
-  <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <% @shoes.each do |shoe| %>
-        <div class="carousel-item active">
-          <div class="row">
-            <div class="column">
-              <div class="card">
-                <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
-                <div class="shoe-thumbnail tbig">
-                <%= cl_image_tag shoe.user.profile_picture.key, class:"avatar" %>
-                <%= cl_image_tag shoe.image1.key, class:"shoe-image" %>
-              </div>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-<%
-=end%>
+
+
+</div>
+
 <div class="d-flex justify-content-between">
-  <% shoe = @shoes[0] %>
-  <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
-    <div class="shoe-thumbnail tbig">
-      <%= cl_image_tag shoe.user.profile_picture.key, class:"avatar" %>
-      <%= cl_image_tag shoe.images[0].key, class:"shoe-image" %>
-    </div>
-  <% end %>
+    <% shoe = @shoes[0] %>
+    <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
+      <div class="shoe-thumbnail tbig">
+        <%= cl_image_tag shoe.user.profile_picture.key, class:"avatar" %>
+        <%= cl_image_tag shoe.images[0].key, class:"shoe-image" %>
+      </div>
+    <% end %>
 
-    <% shoe = @shoes[1] %>
-  <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
-    <div class="shoe-thumbnail tbig">
-      <%= cl_image_tag shoe.user.profile_picture.key, class:"avatar" %>
-      <%= cl_image_tag shoe.images[0].key, class:"shoe-image" %>
-    </div>
-  <% end %>
+      <% shoe = @shoes[1] %>
+    <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
+      <div class="shoe-thumbnail tbig">
+        <%= cl_image_tag shoe.user.profile_picture.key, class:"avatar" %>
+        <%= cl_image_tag shoe.images[0].key, class:"shoe-image" %>
+      </div>
+    <% end %>
 
-    <% shoe = @shoes[2] %>
-  <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
-    <div class="shoe-thumbnail tbig">
-      <%= cl_image_tag shoe.user.profile_picture.key, class:"avatar" %>
-      <%= cl_image_tag shoe.images[0].key, class:"shoe-image" %>
-    </div>
-  <% end %>
-</div>
-</div>
+      <% shoe = @shoes[2] %>
+    <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
+      <div class="shoe-thumbnail tbig">
+        <%= cl_image_tag shoe.user.profile_picture.key, class:"avatar" %>
+        <%= cl_image_tag shoe.images[0].key, class:"shoe-image" %>
+      </div>
+    <% end %>
+  </div>
+  </div>
+
 <%= render "pages/footer_partial" %>
