--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,33 +1,53 @@
-.column {
-  float: left;
-  width: 25%;
-  padding: 0 10px;
+.homepage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
-.row {
-  margin: 0 -5px;
+
+.carousel-indicators {
+  right: 0px;
+  bottom: 50px;
+  left: 0;
+  z-index: 15;
+  display: flex;
+  justify-content: center;
+  padding-left: 0px;
+  list-style: none;
+  margin: 10px;
 }
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
-.carousel {
-  top: 100px;
+
+.homecards {
+  display: flex;
+  justify-content: space-between;
 }
 
 .card {
-  padding: 16px;
-  text-align: center;
-  border: 0;
-  background-color: #fff;
+  border: none;
+  margin-top: 0px;
+  height: 20px;
+  width: 100%;
 }
-.row .column .card img {
+
+.c1, .c3 {
+  margin: 30px;
+  margin-top: -110px;
+}
+
+.avatar {
+  width: 40px;
+  height: auto;
   border-radius: 50%;
+  position: absolute;
+  z-index: 5;
+  right: 0px;
+  top: 80%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.carousel-item {
+  box-shadow: 0px 0px 30px 0px #949494;
 }
