--- a/app/assets/stylesheets/components/_thumbnail.scss
+++ b/app/assets/stylesheets/components/_thumbnail.scss
@@ -72,3 +72,14 @@
 .tsmall {
   font-size: 15px;
 }
+
+.form-select-me {
+  padding: 6px;
+  margin-left: 0.8em;
+}
+
+.filters {
+  label {
+    font-weight: 500;
+  }
+}
