many many bugs fixed

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -6,6 +6,15 @@
   background-color: #5B00B6;
 }
 
+.bookingbtn-small {
+  width: 30%;
+  border-radius: 10px;
+  margin-top: 15px;
+  margin-left: 50px;
+  color: white;
+  background-color: #5B00B6;
+}
+
 .bookingbtn-green {
   width: 40%;
   border-radius: 10px;
