--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,13 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "navbar";
 @import "flexbox";
 @import "header";
 @import "footer";
+@import "thumbnail";
+@import "helper";
+@import "carousel";
+@import "buttons";
+@import "infobox";
+@import "bookingcontainer";
+@import "bookingindex";
