--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,10 +1,11 @@
-<%= render "pages/header_partial" %>
-
 <div class='bookingcontainer'>
   <div class='imgcontainer'>
     <%= cl_image_tag @booking.shoe.user.profile_picture.key, class: 'ownerimg'%>
     <%= cl_image_tag @booking.shoe.images[0].key, class:'shoeimg' %>
     <%= cl_image_tag current_user.profile_picture.key, class:'userimg' %>
+    <br>
+    <br>
+    <p class="btn bookingbtn-small" style="text-decoration:none"><%= link_to bookings_path do %>See my bookings<% end %></p>
   </div>
   <div class='infobox'>
     <h3> Booked! </h3>
