--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -3,67 +3,78 @@
   justify-content: space-between;
   overflow: hidden;
   background-color: #ffffff;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
+  height: 85px;
   border-bottom: 1px solid grey;
+  opacity: 0.85;
+  z-index: 10;
+}
+
+.container-drop {
+  position: absolute;
+  display: flex;
+  margin-top: 10px;
+  margin-right: 10px;
+
 }
 
 .header a img {
   height: 80px;
 }
 
-.header .navbar {
-  height: 100%;
-  overflow-x: hidden;
-  padding-top: 8px;
-}
+// .header .navbar {
+//   height: 100%;
+//   overflow-x: hidden;
+//   padding-top: 8px;
+// }
 
-.header .navbar a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  display: block;
-}
+// .header .navbar a {
+//   padding: 6px 8px 6px 16px;
+//   text-decoration: none;
+//   display: block;
+// }
 
-.header .navbar a img {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  z-index: 0;
-  border: 2px solid #470d69;
-}
+// .header .navbar a img {
+//   height: 50px;
+//   width: 50px;
+//   border-radius: 50%;
+//   z-index: 0;
+//   border: 2px solid #470d69;
+// }
 
-.header .navbar a:hover {
-  opacity: 0.8;
-}
+// .header .navbar a:hover {
+//   opacity: 0.8;
+// }
 
-.header .navbar a:hover img {
-  color: #D4D4D4;
-  border: 2px solid #af6bd6;
-}
+// .header .navbar a:hover img {
+//   color: #D4D4D4;
+//   border: 2px solid #af6bd6;
+// }
 
-.header .navbar a p, .purpletext {
-  color: #29110e;
-  text-shadow: 1px 1px #BBBDF6;
-  font-weight: 600;
-  z-index: 5;
-}
-.header .navbar a p {
-  margin-top: -18px;
-  margin-left: -22px;
-}
+// .header .navbar a p, .purpletext {
+//   color: #29110e;
+//   text-shadow: 1px 1px #BBBDF6;
+//   font-weight: 600;
+//   z-index: 5;
+// }
+// .header .navbar a p {
+//   margin-top: -18px;
+//   margin-left: -22px;
+// }
 
-.header .navbar a:hover p {
-  color: #9323d3;
-  text-shadow: 1px 2px white;
-}
+// .header .navbar a:hover p {
+//   color: #9323d3;
+//   text-shadow: 1px 2px white;
+// }
 
-.nav-p {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 40px;
-}
+// .nav-p {
+//   padding-left: 20px;
+//   padding-right: 20px;
+//   padding-top: 40px;
+// }
 
 .dropbtn {
   padding: 16px;
@@ -73,34 +84,41 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  z-index: 15;
 }
 
 .dropbtn:hover, .dropbtn:focus {
-  background-color: fff;
+  background-color: #FFFFFF;
+  color: #470D69
 }
 
 .dropdown {
+  top: 0px;
+  right: 0px;
+  position: fixed;
   float: right;
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: end;
   padding: 1%;
+  z-index: 18;
 }
 
 .dropdown-content {
   display: none;
   background-color: #B78EE0;
-  color: #470D69;
+  color: white;
   min-width: 200px;
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   right: 0;
   margin: 50%;
+  z-index: 28;
 }
 
 .dropdown-content a {
-  color: black;
+  color: white;
+  text-shadow: 1 1 darkgrey;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -113,7 +131,8 @@
 }
 
 .show {
-  display: block;
+  display: flex;
+  flex-direction: column;
   position: absolute;
   z-index: 999;
 }
