--- a/app/assets/stylesheets/components/_flexbox.scss
+++ b/app/assets/stylesheets/components/_flexbox.scss
@@ -7,29 +7,30 @@
 
 #profile {
   position: fixed;
-  margin-right: 150px;
   z-index: 5;
+  background-color: rgba(238, 210, 254, 0.17);
+  border-right:  #9c9c9c 0.5px solid;
+  border-left:  #9c9c9c 0.5px solid;
+
 }
 
 .description-box {
   overflow-y:auto;
   width: 400px;
   height: 200px;
-  border: 2px solid #470d69;
-  border-radius: 3px;
   text-align: justify;
   font-weight: 500;
-  color: #470d69;
+  color: #000000;
+  padding: 30px;
+
 }
 
 .user-profile, .purpletitle {
   width: 400px;
   text-align: center;
   font-weight: 700;
-  color: #470d69;
+  color: #000000;
   text-shadow: 1px 1px white;
-  border: 2px solid #470d69;
-  border-radius: 3px;
   padding: 10px;
   margin-top: 10px;
 
@@ -48,11 +49,10 @@
 
 .user-profile img {
   object-fit: cover;
-  width: 18em;
-  height: 18em;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
-  border: 0.3em solid white;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 3px rgba(68, 68, 68, 0.2);
 }
 
 #shoes {
