ready to roll bitches

--- a/app/assets/stylesheets/components/_thumbnail.scss
+++ b/app/assets/stylesheets/components/_thumbnail.scss
@@ -72,3 +72,17 @@
 .tsmall {
   font-size: 15px;
 }
+
+.purpletext {
+  font-weight: 600;
+  color: #470d69;
+  text-shadow: 1px 1px darkgrey;
+  text-align: left;
+}
+
+.purpletext-2 {
+  font-weight: 300;
+  color: #9135c7;
+  text-shadow: 1px 1px darkgrey;
+  text-align: left;
+}
