--- a/app/views/pages/_header_partial.html.erb
+++ b/app/views/pages/_header_partial.html.erb
@@ -36,7 +36,7 @@
       <%= link_to shoes_path do %>All shoes<% end %>
       <%= link_to new_shoe_path do %>Add shoes<% end %>
       <%= link_to bookings_path do %>Bookings<% end %>
-      <%= link_to about_path do %>About<% end %>
+      <%= link_to about_path do %>About Us<% end %>
       <hr>
       <% if current_user.nil? %>
       <%= link_to new_user_session_path do %>Log in<% end %>
