--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -14,3 +14,41 @@
   border-radius: 50%;
   box-shadow: 0px 0px 30px 0px #949494;
 }
+
+.banner {
+  position: absolute;
+  top: 35%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+  font-weight: 800;
+  font-size: 50px;
+  text-shadow: 2px 2px black;
+  opacity: 0.8;
+}
+
+.banner-three {
+  position: absolute;
+  top: 45%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+  font-weight: 800;
+  font-size: 50px;
+  text-shadow: 2px 2px black;
+  opacity: 0.8;
+}
+
+.banner-home {
+  font-family: Verdana,
+  Geneva,
+  Tahoma,
+  sans-serif;
+  color: #470D69;
+  font-weight: 800;
+  font-size: 35px;
+  text-shadow: 2px 2px black;
+  opacity: 0.8;
+}
