--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,7 @@
   background-color: #fff;
   text-align: left;
   padding: 10px 20px;
-  opacity: 0.7;
+  opacity: 0.65;
   z-index: 10;
+  border-top: 1px solid lightgrey;
 }
