--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -8,7 +8,7 @@
   top: 0;
   width: 100%;
   height: 85px;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid lightgrey;
   opacity: 0.85;
   z-index: 10;
 }
