--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class='homepage'>
-  <div id="carousel-example-1z" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel" data-interval="2500">
+  <div id="carousel-example-1z" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel" data-interval="3500">
     <!--Indicators-->
     <ol class="carousel-indicators">
       <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
@@ -12,16 +12,19 @@
       <!--First slide-->
       <div class="carousel-item active">
         <img class="d-block w-100 carouselimg" src="https://images.unsplash.com/photo-1616070317482-ea5a9f253b64?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="First slide">
+        <h2 class="banner">You love shoes? We love shoes.</h2>
       </div>
       <!--/First slide-->
       <!--Second slide-->
       <div class="carousel-item">
         <img class="d-block w-100 carouselimg" src="https://images.unsplash.com/photo-1613380429263-ac444f31cdc5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2200&q=80" alt="Second slide">
+        <h2 class="banner">Rent the smoothest sneakers with <strong>OBUVnB</strong></h2>
       </div>
       <!--/Second slide-->
       <!--Third slide-->
       <div class="carousel-item">
         <img class="d-block w-100 carouselimg" src="<%= image_path ("/assets/shoe.jpg") %>" alt="Third slide">
+        <h2 class="banner-three">Never look terrible again.</h2>
       </div>
       <!--/Third slide-->
     </div>
@@ -37,6 +40,18 @@
     </a>
     <!--/.Controls-->
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h2 class="banner-home">Pick a shoe, rent it today:</h2>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <div class="homecards">
     <div class="card c1">
       <% shoe = @shoes[0] %>
@@ -67,6 +82,21 @@
         </div>
       <% end %>
     </div>
+    <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   </div>
   </div>
 </div>
