--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class='homepage'>
-<%= link_tag shoes_path do %>
+<%= link_to shoes_path do %>
   <div id="carousel-example-1z" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel" data-interval="3500">
     <!--Indicators-->
     <ol class="carousel-indicators">
