--- a/app/assets/stylesheets/components/_flexbox.scss
+++ b/app/assets/stylesheets/components/_flexbox.scss
@@ -11,11 +11,10 @@
 
 #profile {
   position: fixed;
+  margin-left: -30px;
+  margin-top: -32px;
   z-index: 5;
-  background-color: rgba(238, 210, 254, 0.17);
   border-right:  #9c9c9c 0.5px solid;
-  border-left:  #9c9c9c 0.5px solid;
-
 }
 
 .description-box {
